--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,9 @@ ul>li {
     width: 45px;
     height: 45px;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .forest .roundBtn {
